# kolmogorov

./: .gitignore  README.md  pyproject.toml  state-kolmogorov-task.md
configs/: base_config.yaml  dpo_config.yaml  reward_config.yaml  sft_config.yaml
src/kolmogorov/data/: __init__.py  collector.py  formatters.py  preference_dataset.py
